@@ -432,19 +432,25 @@ module ActionView #:nodoc:
       # Check whether compilation is necessary.
       # Compile if the inline template or file has not been compiled yet.
       # Or if local_assigns has a new key, which isn't supported by the compiled code yet.
-      # Or if the file has changed on disk and checking file mods hasn't been disabled. 
+      # Or if the file has changed on disk and checking file mods hasn't been disabled.
       def compile_template?(template, file_name, local_assigns)
         method_key    = file_name || template
         render_symbol = @@method_names[method_key]
 
         if @@compile_time[render_symbol] && supports_local_assigns?(render_symbol, local_assigns)
-          if file_name && !@@cache_template_loading 
-            @@compile_time[render_symbol] < File.mtime(file_name) ||
-              (File.symlink?(file_name) && (@@compile_time[render_symbol] < File.lstat(file_name).mtime))
+          if file_name && !@@cache_template_loading
+            template_changed_since?(file_name, @@compile_time[render_symbol])
           end
         else
           true
         end
+      end
+
+      # handles checking if template changed since last compile, isolated so that templates
+      # not stored on the file system can hook and extend appropriately
+      def template_changed_since?(file_name, compile_time)
+        compile_time < File.mtime(file_name) ||
+          (File.symlink?(file_name) && (compile_time < File.lstat(file_name).mtime))
       end
 
       # Create source code for given template
